# VK_C_Cpp_Individual_Tasks

./: CMakeLists.txt  Makefile  README.md  data.json
add_composition/: CMakeLists.txt  add_composition.c  add_composition.h
linters/: run.sh
src/: main.c
string_io/: CMakeLists.txt  string_io.c  string_io.h
tests/: CMakeLists.txt  test.cpp
view_composition/: CMakeLists.txt  view_composition.c  view_composition.h
